# sql-logic-test-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: db.rs  lib.rs  logic_tests.rs  main.rs  std_ext.rs
src/slt/: basic.slt
