[package]
name = "sql-logic-test"
version = "0.1.0"
edition = "2021"
authors = ["Jiseok CHOI <jiseok.dev@gmail.com>"]

[dependencies]
# library
eyre = "0.6"
glob = "0.3"
sqlite = "0.30"
sqllogictest = { path = "./sqllogictest-rs/sqllogictest", version = "0.11" }
thiserror = "1"
tracing = "0.1"

# binary
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
